--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "iceking-frontend",
+  "name": "iceking-dashboard",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "dev": "vite"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "chart.js": "^4.4.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
