--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "crypto": "^1.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "crypto": "^1.0.1"
   }
 }
