--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "crypto": "^1.0.1"
+    "ethers": "^6.13.5",
+    "express": "^4.18.2"
   }
 }
