--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "omni-trading-webhook",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "ts-node index.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "dotenv": "^16.1.4",
-    "express": "^4.18.2",
-    "uuid": "^9.0.0",
-    "ethers": "^6.7.0"
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "uuid": "^10.0.0",
+    "bignumber.js": "^9.1.2"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.1"
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.4",
+    "typescript": "^5.6.2",
+    "ts-node": "^10.9.2"
   }
 }
-
