--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
-    "outDir": "dist",
-    "rootDir": "./",
+    "strict": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": false,
-    "skipLibCheck": true
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./"
   },
-  "include": ["index.ts", "apex-sdk-node/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["index.ts", "apex-sdk-node/**/*.ts"],
+  "exclude": ["node_modules"]
 }
