--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "uuid": "^10.0.0",
-    "bignumber.js": "^9.1.2"
+    "bignumber.js": "^9.1.2",
+    "big.js": "^6.2.1",
+    "bn.js": "^5.2.1",
+    "elliptic": "^6.5.7"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
     "typescript": "^5.6.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "@types/express": "^5.0.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/uuid": "^10.0.0"
   }
 }
