--- a/package.json
+++ b/package.json
@@ -15,7 +15,17 @@
     "bignumber.js": "^9.1.2",
     "big.js": "^6.2.1",
     "bn.js": "^5.2.1",
-    "elliptic": "^6.5.7"
+    "elliptic": "^6.5.7",
+    "crypto-js": "^4.2.0",
+    "lodash": "^4.17.21",
+    "web3": "^4.5.0",
+    "ethers": "^6.13.2",
+    "es6-promisify": "^7.0.0",
+    "web3-core": "^4.4.0",
+    "web3-core-helpers": "^4.0.0",
+    "ethereum-cryptography": "^2.2.1",
+    "bigint-buffer": "^1.1.5",
+    "viem": "^2.21.23"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
@@ -24,6 +34,13 @@
     "ts-node": "^10.9.2",
     "@types/express": "^5.0.0",
     "@types/body-parser": "^1.19.5",
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "@types/big.js": "^6.2.2",
+    "@types/bn.js": "^5.1.6",
+    "@types/elliptic": "^6.4.18",
+    "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.10",
+    "@types/web3": "^1.2.2",
+    "@types/es6-promisify": "^6.0.4"
   }
 }
