--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "elliptic": "^6.5.7",
     "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
-    "web3": "^4.5.0",
+    "web3": "^4.16.0",
+    "web3-core-helpers": "1.10.4",
     "ethers": "^6.13.2",
     "es6-promisify": "^7.0.0",
-    "web3-core": "^4.4.0",
-    "web3-core-helpers": "^4.0.0",
     "ethereum-cryptography": "^2.2.1",
     "bigint-buffer": "^1.1.5",
     "viem": "^2.21.23"
@@ -40,7 +39,6 @@
     "@types/elliptic": "^6.4.18",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.17.10",
-    "@types/web3": "^1.2.2",
     "@types/es6-promisify": "^6.0.4"
   }
 }
