--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["index.ts", "apex-sdk-node/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["index.ts", "apex-sdk-node/src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "apex-sdk-node/test/**/*.ts"]
 }
