--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "ts-node index.ts",
-    "build": "tsc"
+    "preinstall": "npm set audit-level high",
+    "postinstall": "npm audit fix --force && npm run patch-sdk",
+    "patch-sdk": "ts-node patch-sdk.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "ts-node index.ts",
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -38,7 +45,19 @@
     "@types/lodash": "^4.17.10",
     "@types/node": "^22.14.0",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
