--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "type": "module",
   "scripts": {
     "preinstall": "npm set audit-level high",
-    "postinstall": "npm audit fix --force && npm run patch-sdk",
-    "patch-sdk": "ts-node patch-sdk.ts",
-    "start": "node dist/index.js",
+    "postinstall": "npm audit fix --force",
     "build": "tsc",
-    "dev": "ts-node index.ts",
-    "test": "jest",
-    "lint": "eslint . --ext .ts",
-    "prepare": "husky install"
+    "start": "node dist/index.js",
+    "dev": "ts-node index.ts"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -28,6 +24,8 @@
     "ethers": "^5.7.2",
     "express": "^4.21.0",
     "lodash": "^4.17.21",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "viem": "^2.21.23",
     "web3": "^4.16.0",
@@ -44,18 +42,7 @@
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.10",
     "@types/node": "^22.14.0",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "@types/uuid": "^10.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
