--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "preinstall": "npm set audit-level high",
     "postinstall": "npm audit fix --force && npm run patch-sdk",
-    "patch-sdk": "ts-node patch-sdk.ts",
-    "build": "tsc",
+    "patch-sdk": "ts-node --skip-project patch-sdk.ts",
+    "build": "tsc --skipLibCheck",
     "start": "node dist/index.js",
     "dev": "ts-node index.ts",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.7.7",
