--- a/apex-sdk-node/.gitignore
+++ b/apex-sdk-node/.gitignore
@@ -1,12 +1,12 @@
-//this will affect all the git repos
-git config --global core.excludesfile ~/.gitignore
+# 🛠️ Global Git config (you can still set this globally, optional)
+# git config --global core.excludesfile ~/.gitignore
 
+# 🧼 Untrack files already committed but now ignored
+# git rm --cached <file>
 
-//update files since .ignore won't if already tracked
-git rm --cached <file>
-
-# Compiled source #
-###################
+# =========================
+# 📦 Compiled / Binary Files
+# =========================
 *.com
 *.class
 *.dll
@@ -14,10 +14,9 @@ git rm --cached <file>
 *.o
 *.so
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
+# =========================
+# 🗜️ Compressed Packages
+# =========================
 *.7z
 *.dmg
 *.gz
@@ -27,20 +26,21 @@ git rm --cached <file>
 *.tar
 *.zip
 
-# Logs and databases #
-######################
+# =========================
+# 🪵 Logs / Databases
+# =========================
 *.log
 *.sql
 *.sqlite
 
-# OS generated files #
-######################
+# =========================
+# 💻 OS / Editor junk
+# =========================
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
-# Icon?
 ehthumbs.db
 Thumbs.db
 .cache
@@ -49,9 +49,12 @@ Thumbs.db
 .tmproj
 *.esproj
 nbproject
+.VimballRecord
+.netrwhist
 
-# Numerous always-ignore extensions #
-#####################################
+# =========================
+# ⚙️ Temp Files
+# =========================
 *.diff
 *.err
 *.orig
@@ -65,33 +68,15 @@ nbproject
 *.grunt
 *.tmp
 
-# Dreamweaver added files #
-###########################
-_notes
-dwsync.xml
-
-# Komodo #
-###########################
-*.komodoproject
-.komodotools
-
-# Node #
-#####################
-node_modules
-
-# Bower #
-#####################
-bower_components
-
-# Folders to ignore #
-#####################
+# =========================
+# 💻 IDE & Editor folders
+# =========================
 .hg
 .svn
 .CVS
-intermediate
-publish
 .idea
-.graphics
+graphics
+graphics-output
 _test
 _archive
 uploads
@@ -99,29 +84,29 @@ tmp
 cache
 artifacts
 
-# Vim files to ignore #
-#######################
-.VimballRecord
-.netrwhist
-
-# Debug files to ignore #
-#########################
-example.js
-
-# Build directories #
-#####################
-build
-dist
-docs
-
-# Files to ignore #
-#####################
+# =========================
+# 💼 Node & Package Managers
+# =========================
+node_modules
+bower_components
 package-lock.json
+yarn.lock
+
+# =========================
+# ❌ Ignore ONLY non-critical builds/docs
+# (but KEEP dist/ to allow Render to run)
+# =========================
+build
+docs
+lib
 doc
 
-
+# =========================
+# ❌ Test + Local-only files
+# =========================
 mochawesome-report
-
-lib
 src/mock/index.local.ts
 /packages
+
+# Optional: ignore examples or debug JS
+example.js
