--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "preinstall": "npm set audit-level high",
     "build": "tsc --skipLibCheck",
     "start": "node dist/index.js",
-    "dev": "ts-node index.ts",
+    "dev": "ts-node --esm index.ts",
     "prepare": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -30,7 +31,7 @@
     "uuid": "^10.0.0",
     "viem": "^2.21.23",
     "web3": "^4.16.0",
-    "web3-core-helpers": "1.7.0"
+    "web3-core-helpers": "^1.7.0"
   },
   "devDependencies": {
     "@types/big.js": "^6.2.2",
@@ -47,5 +48,6 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "packageManager": "npm@10.x"
 }
