--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "module": "ESNext",
     "strict": false,
     "esModuleInterop": true,
@@ -8,13 +8,10 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": ".",
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*"]
-    }
+    "allowJs": true
   },
-  "include": ["index.ts", "apex-sdk-node/src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "apex-sdk-node/test/**/*.ts"]
+  "include": ["src/**/*", "apex-sdk-node/src/**/*", "index.js"],
+  "exclude": ["node_modules", "dist", "apex-sdk-node/test/**/*"]
 }
