--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "preinstall": "npm set audit-level high",
     "build": "tsc --skipLibCheck",
     "start": "node dist/index.js",
     "dev": "ts-node --esm index.ts",
@@ -14,37 +13,30 @@
   "dependencies": {
     "axios": "^1.7.7",
     "big.js": "^6.2.1",
-    "bigint-buffer": "^1.1.5",
     "bignumber.js": "^9.1.2",
     "bn.js": "^5.2.1",
-    "body-parser": "^1.20.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "elliptic": "^6.5.7",
-    "es6-promisify": "^7.0.0",
-    "ethereum-cryptography": "^2.2.1",
     "ethers": "^5.7.2",
     "express": "^4.21.0",
     "lodash": "^4.17.21",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "viem": "^2.21.23",
-    "web3": "^4.16.0",
-    "web3-core-helpers": "^1.7.0"
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/big.js": "^6.2.2",
     "@types/bn.js": "^5.1.6",
-    "@types/body-parser": "^1.19.5",
     "@types/crypto-js": "^4.2.2",
     "@types/elliptic": "^6.4.18",
-    "@types/es6-promisify": "^6.0.4",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.10",
     "@types/node": "^22.14.0",
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=18.0.0"
