--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "packageManager": "yarn@4.5.0",
   "scripts": {
     "preinstall": "npm set audit-level high",
+    "install": "yarn install --immutable",
     "build": "tsc --skipLibCheck",
     "start": "node dist/index.js",
     "dev": "ts-node index.ts",
