--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "packageManager": "yarn@4.5.0",
   "scripts": {
-    "preinstall": "npm set audit-level high",
-    "install": "yarn install --immutable",
+    "preinstall": "echo 'Setting up Yarn'",
+    "install": "yarn install",
     "build": "tsc --skipLibCheck",
     "start": "node dist/index.js",
     "dev": "ts-node index.ts",
